project sliders wowslider

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -52,3 +52,7 @@
 .jssora21r:hover { background-position: -183px -33px; }
 .jssora21l.jssora21ldn { background-position: -243px -33px; }
 .jssora21r.jssora21rdn { background-position: -303px -33px; }
+
+.caption-text{
+    position: absolute; top: 300px; left: 30px; width: 650px; height: 200px; background-color: rgba(39,124,145, 0.35); font-size: 50px; color: #ffffff; line-height: 30px; text-align: center;
+}
